Update Valentine message in letter title

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Letter Screen -->
     <div id="letter-container">
       <div class="letter-window">
-        <h1 id="letter-title">Will you be my Valentine for the rest of our lives, Aayush KC?</h1>
+        <h1 id="letter-title">we're gon be besties forever</h1>
 
         <img src="cat_heart.gif" class="cat" id="letter-cat" />
 
